Update on Overleaf.

--- a/kdd2021.tex
+++ b/kdd2021.tex
@@ -77,9 +77,9 @@
 \author{Gleb Gusev}
 \email{gleb57@gmail.com}
 \affiliation{  
-    \institution{Sber AI Lab} 
-    \institution{MIPT} 
-    \country{Moscow, Russia}} 
+    \institution{Sber AI Lab; AIRI, Moscow, Russia;} 
+    \institution{Moscow Institute of Physics and Technology}
+    \country{}} 
 %\affiliation{
 %    \institution{Moscow Institute of Physics and Technology}
 %    \country{Moscow, Russia}}
