headers are removed

--- a/sigmod2022.tex
+++ b/sigmod2022.tex
@@ -64,6 +64,8 @@
 
 \begin{document}
 
+\fancyhead{}
+
 \title{CoLES: Contrastive Learning for Event Sequences with Self-Supervision}
 
 \author{Dmitrii Babaev} \thanks{E-mail: dmitri.babaev@gmail.com}
